replace: {
    path: {
      origin: "cli"
    }
    val: {
      ascii_val:
"hostname Yukon-2\n"
"clock timezone IST Asia/Kolkata\n"
"userame cisco\n"
" group root-lr\n"
" group cisco-support\n"
" secret 10 $6$tBgKB11fJnOpAB1.$Q2O1WAvQ9NNEAa5281Mrh/eq0jq7KdouCZKdxrJ3bKbMZaa58RtFZ5hpfGR4mHFO0BJwhXExPzLl6OK8tTk2K1\n"
"!\n"
"username cafyauto\n"
" group root-lr\n"
" group cisco-support\n"
" secret 10 $6$xcEy7/8YTGtb27/.$0HrsAE61pK8NlB5axW87LiC55ZhExUSUTm2ZDgi.dcl6CV/8ETpa.jt8NhiTkn2LtL0CXAzPrvl/ZvycP4Fyv.\n"
"!\n"
"grpc\n"
" port 8202\n"
" p4rt\n"
"  interface FourHundredGigE0/0/0/20\n"
"   port-id 1000\n"
"  !\n"
" !\n"
"!\n"
"line console\n"
" exec-timeout 0 0\n"
"!\n"
"line default\n"
" exec-timeout 0 0\n"
" session-timeout 0\n"
"!\n"
"call-home\n"
" service active\n"
" contact smart-licensing\n"
" profile CiscoTAC-1\n"
"  active\n"
"  destination transport-method email disable\n"
"  destination transport-method http\n"
" !\n"
"!\n"
"netconf-yang agent\n"
" ssh\n"
"!\n"
"ipv4 virtual address 5.18.17.177/16\n"
"interface MgmtEth0/RP0/CPU0/0\n"
" ipv4 address 5.18.17.176 255.255.0.0\n"
" ipv6 address 2001:420:2841:3030::3031/116\n"
"!\n"
"controller Optics0/0/0/0\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/1\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/2\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/3\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/4\n"
" breakout 4x100\n"
"!\n"
"controller Optics0/0/0/6\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/20\n"
" breakout 4x10\n"
"!\n"
"controller Optics0/0/0/31\n"
" breakout 4x10\n"
"!\n"
"interface HundredGigE0/0/0/5\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/7\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/8\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/9\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/10\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/11\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/12\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/13\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/14\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/15\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/16\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/17\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/18\n"
" description dutPort1\n"
" ipv4 address 192.0.2.1 255.255.255.252\n"
" loopback line\n"
" carrier-delay up 5000 down 5000\n"
"!\n"
"interface FourHundredGigE0/0/0/19\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/21\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/22\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/23\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/25\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/26\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/27\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/28\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/29\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FourHundredGigE0/0/0/30\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/5\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/6\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/20\n"
" description dutPort2\n"
" ipv4 address 192.0.2.5 255.255.255.252\n"
"!\n"
"interface preconfigure FourHundredGigE0/0/0/24\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"router static\n"
" address-family ipv4 unicast\n"
"  5.0.0.0/8 5.18.0.1\n"
"  223.255.254.0/24 5.18.0.1\n"
" !\n"
" address-family ipv6 unicast\n"
"  ::/0 2001:420:2841:3030::3001\n"
" !\n"
"!\n"
"netconf agent tty\n"
"!\n"
"terminal-device\n"
" optical-channel OpticalChannel0_0_0_18\n"
"  power -900\n"
"  frequency 193100000\n"
"  operational-mode 5003\n"
" !\n"
" optical-channel OpticalChannel0_0_0_20\n"
"  power -900\n"
"  frequency 193100000\n"
"  operational-mode 5003\n"
" !\n"
"!\n"
"lldp\n"
"!\n"
"ssh timeout 120\n"
"ssh server rate-limit 600\n"
"ssh server session-limit 100\n"
"ssh server v2\n"
"ssh server vrf default\n"
"ssh server netconf vrf default\n"
"interface \n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface FortyGigE0/0/0/24\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface \n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface \n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface HundredGigE0/0/0/4/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface HundredGigE0/0/0/4/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface HundredGigE0/0/0/4/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface HundredGigE0/0/0/4/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface Null0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/0/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/0/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/0/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/0/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/1/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/1/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/1/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/1/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/2/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/2/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/2/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/2/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/20/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/20/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/20/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/20/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/3/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/3/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/3/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/3/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/31/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/31/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/31/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/31/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/6/0\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/6/1\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/6/2\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"interface TenGigE0/0/0/6/3\n"
" description not connected interface\n"
" shutdown\n"
"!\n"
"end\n"
"\n"
}
}
